# ChangeLog for app-emulation/xen
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emulation/xen/ChangeLog,v 1.22 2006/02/03 23:00:43 chrb Exp $

*xen-3.0.1 (03 Feb 2006)

  03 Feb 2006; <chrb@gentoo.org> +xen-3.0.1.ebuild:
  bump

*xen-3.0.0-r2 (23 Dec 2005)

  23 Dec 2005; <chrb@gentoo.org> files/xend-init, files/xendomains-init,
  -xen-2.0.7.ebuild, -xen-3.0.0-r1.ebuild, +xen-3.0.0-r2.ebuild:
  Bugs #115970 (/var/xen/dump), #115969 (dhcp), #116332 (hotplug). Removed
  xen-2 as bugs are not being fixed upstream since the xen-3.0.0 release.

  21 Dec 2005; Alex Howells <astinus@gentoo.org> xen-3.0.0-r1.ebuild:
  Keyword ~amd64 added, works fine for me!

  08 Dec 2005; <chrb@gentoo.org> xen-3.0.0-r1.ebuild:
  rename cflags -> custom-cflags (like mplayer, grub..)

*xen-3.0.0-r1 (08 Dec 2005)

  08 Dec 2005; <chrb@gentoo.org> -xen-3.0.0.ebuild, +xen-3.0.0-r1.ebuild:
  add dirs expected by xend, bug #114856

  07 Dec 2005; <chrb@gentoo.org> xen-3.0.0.ebuild:
  Fix CFLAGS for hardened bug #114716

*xen-3.0.0 (06 Dec 2005)

  06 Dec 2005; <chrb@gentoo.org> -xen-3.0.0_pre20051027.ebuild,
  -xen-3.0.0_pre20051122.ebuild, -xen-3.0.0_pre20051128.ebuild,
  -xen-3.0.0_pre20051128-r1.ebuild, +xen-3.0.0.ebuild:
  New 3.0.0 release.

*xen-3.0.0_pre20051128-r1 (30 Nov 2005)

  30 Nov 2005; <chrb@gentoo.org> xen-3.0.0_pre20051128.ebuild,
  +xen-3.0.0_pre20051128-r1.ebuild:
  support user specified cflags (must be forced to override defaults with
  'cflags' USE flag

*xen-3.0.0_pre20051128 (28 Nov 2005)

  28 Nov 2005; <chrb@gentoo.org> +xen-3.0.0_pre20051128.ebuild:
  bump

*xen-3.0.0_pre20051122 (22 Nov 2005)

  22 Nov 2005; <chrb@gentoo.org> +xen-3.0.0_pre20051122.ebuild:
  version bump

  03 Nov 2005; <chrb@gentoo.org> -xen-3.0.0_pre20051010.ebuild,
  -xen-3.0.0_pre20051010-r1.ebuild:
  remove old cvs snapshots

*xen-3.0.0_pre20051027 (27 Oct 2005)

  27 Oct 2005; <chrb@gentoo.org> files/xendomains-init,