@@ -1,10 +1,8 @@
-MD5 5ed0174f83650ce67741a3279031f8a0 ChangeLog 3862
-MD5 90e5b1c2b898e75ca70fb693f1767d74 files/digest-xen-3.0.0-r2 78
-MD5 b3ff79e367bb2e3f509e4df212fc8fa7 files/digest-xen-3.0.1 78
+MD5 4b829486b65fe01a43ee53fb452fd714 ChangeLog 3929
+MD5 56094a0027222619886780d80733433d files/digest-xen-3.0.1 74
 MD5 16d372298e94a8eef72c1943b1ed5561 files/xend-conf 347
 MD5 b16cb40a29cb947b2a9b76cc8f9f3894 files/xend-init 844
 MD5 11ef318e35fcfed12931f182fc01955a files/xendomains-conf 180
 MD5 a3c0c26c30ce1271b439661b68ca9e74 files/xendomains-init 1671
 MD5 23ec60d5040f966fda250a47d8903428 metadata.xml 252
-MD5 8019f3910bed2c172f1727f903ccb46f xen-3.0.0-r2.ebuild 3009
-MD5 014a79abc7f3beb8d131a58b9edbdca0 xen-3.0.1.ebuild 3006
+MD5 c8fe263d8180959e6b661e16105e9f89 xen-3.0.1.ebuild 3003
