@@ -1,13 +1,13 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/xen/Attic/xen-3.0.1.ebuild,v 1.1 2006/02/03 23:00:43 chrb Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/xen/Attic/xen-3.0.1.ebuild,v 1.2 2006/02/04 18:55:22 chrb Exp $
 
 inherit mount-boot flag-o-matic
 
 DESCRIPTION="The Xen virtual machine monitor and Xend daemon"
 HOMEPAGE="http://xen.sourceforge.net"
-DATE="20060203"
-MY_P="xen-3.0-testing-${DATE}"
+REV="8738"
+MY_P="xen-3.0-testing-${REV}"
 SRC_URI="mirror://gentoo/${MY_P}.tar.bz2"
 
 LICENSE="GPL-2"
