@@ -1,6 +1,9 @@
 # ChangeLog for app-emulation/xen
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/xen/ChangeLog,v 1.22 2006/02/03 23:00:43 chrb Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/xen/ChangeLog,v 1.23 2006/02/04 18:55:22 chrb Exp $
+
+  04 Feb 2006; <chrb@gentoo.org> xen-3.0.1.ebuild:
+  fix snapshot
 
 *xen-3.0.1 (03 Feb 2006)
 
